--- a/CarService-SPA/src/app/admin/dashboard/users/users.component.html
+++ b/CarService-SPA/src/app/admin/dashboard/users/users.component.html
@@ -28,7 +28,7 @@
                                 </div>
                             </div>
                             <div class="table-responsive table-data">
-                                <table class="table">
+                                <table class="table" style="font-size: 12px;">
                                     <thead>
                                         <tr>
                                             <td>
