--- a/CarService-SPA/src/app/admin/sidebar/sidebar.component.html
+++ b/CarService-SPA/src/app/admin/sidebar/sidebar.component.html
@@ -31,22 +31,7 @@
                 </li>
                 <li>
                     <a href="map.html">
-                        <i class="fas fa-map-marker-alt"></i>Maps</a>
-                </li>
-                <li class="has-sub">
-                    <a class="js-arrow" href="#">
-                        <i class="fas fa-copy"></i>Pages</a>
-                    <ul class="list-unstyled navbar__sub-list js-sub-list">
-                        <li>
-                            <a href="login.html">Login</a>
-                        </li>
-                        <li>
-                            <a href="register.html">Register</a>
-                        </li>
-                        <li>
-                            <a href="forget-pass.html">Forget Password</a>
-                        </li>
-                    </ul>
+                        <i class="fas fa-list-alt"></i>Car Receipts</a>
                 </li>
                 <li>
                     <a [routerLink]="['/']">
