--- a/CarService-SPA/src/app/client/_nav/nav.component.html
+++ b/CarService-SPA/src/app/client/_nav/nav.component.html
@@ -108,7 +108,7 @@
               <li>
                 <a href="">Welcome {{this.authService.decodedToken?.unique_name | titlecase}}</a>
                 <ul style="width: 150px;" class="sub_menu">
-                  <li style="cursor: pointer;"><i class="fa fa-shopping-cart"></i><a [routerLink]="['/myorders']">Orders</a></li>
+                  <li style="cursor: pointer;"><i class="fa fa-shopping-cart"></i><a [routerLink]="['/purchases']">Orders</a></li>
                   <li style="cursor: pointer;"><i class="fa fa-sign-out"></i><a (click)="logout()">Sign Out</a></li>
                 </ul>
               </li>
@@ -235,7 +235,7 @@
               <li>
                 <a href="">Welcome {{this.authService.decodedToken?.unique_name | titlecase}}</a>
                 <ul style="width: 150px;" class="sub_menu">
-                  <li style="cursor: pointer;"><i class="fa fa-shopping-cart"></i><a [routerLink]="['/myorders']">Orders</a></li>
+                  <li style="cursor: pointer;"><i class="fa fa-shopping-cart"></i><a [routerLink]="['/purchases']">Orders</a></li>
                   <li style="cursor: pointer;"><i class="fa fa-sign-out"></i><a (click)="logout()">Sign Out</a></li>
                 </ul>
               </li>
