--- a/CarService-SPA/src/app/client/login/login.component.html
+++ b/CarService-SPA/src/app/client/login/login.component.html
@@ -1,20 +1,25 @@
 <div class="row justify-content-center">
-  <form class="col-4" #loginForm="ngForm" (ngSubmit)="login()">
+  <form class="col-4" [formGroup]="loginForm" (ngSubmit)="login()">
     <h2 class="text-center text-primary">Login</h2>
     <hr>
 
     <div class="form-group">
-      <input type="text" class="form-control" required name="username" [(ngModel)]="model.username"
+      <input type="text" class="form-control"
+      [ngClass]="{'is-invalid': loginForm.get('username').errors && loginForm.get('username').touched}"
+      formControlName="username"
         placeholder="Username">
+      <div *ngIf="loginForm.get('username').touched && loginForm.get('username').hasError('required')" class="invalid-feedback">Username is required</div>
     </div>
 
     <div class="form-group">
-      <input type="password" class="form-control" required name="password" [(ngModel)]="model.password"
+      <input type="password" class="form-control" [ngClass]="{'is-invalid': loginForm.get('password').errors && loginForm.get('password').touched}"
+      formControlName="password"
         placeholder="Password">
+        <div *ngIf="loginForm.get('password').touched && loginForm.get('password').hasError('required')" class="invalid-feedback">Password is required</div>
     </div>
 
     <div class="form-group text-center">
-      <button class="btn btn-success" type="submit">Login</button>
+      <button class="btn btn-success" type="submit" [disabled]="!loginForm.valid">Login</button>
       <button class="btn btn-default" type="button" [routerLink]="['/']">Cancel</button>
     </div>
 
