--- a/CarService-SPA/src/app/client/register/register.component.html
+++ b/CarService-SPA/src/app/client/register/register.component.html
@@ -23,10 +23,10 @@
     <div class="form-group">
       <label class="control-label" style="margin-right:10px">Gender: </label>
       <label class="radio-inline">
-        <input class="mr-3" type="radio" value="male" formControlName="gender">Male
+        <input class="mr-3" type="radio" value="Male" formControlName="gender">Male
       </label>
       <label class="radio-inline ml-3">
-        <input class="mr-3" type="radio" value="female" formControlName="gender">Female
+        <input class="mr-3" type="radio" value="Female" formControlName="gender">Female
       </label>
     </div>
     <div class="row">
