--- a/CarService-SPA/src/app/client/_nav/nav.component.html
+++ b/CarService-SPA/src/app/client/_nav/nav.component.html
@@ -108,6 +108,7 @@
               <li>
                 <a href="">Welcome {{this.authService.decodedToken?.unique_name | titlecase}}</a>
                 <ul style="width: 150px;" class="sub_menu">
+                  <li style="cursor: pointer;"><i class="fa fa-user-circle"></i><a [routerLink]="['/profile']">Edit Profile</a></li>
                   <li style="cursor: pointer;"><i class="fa fa-shopping-cart"></i><a [routerLink]="['/purchases']">Orders</a></li>
                   <li style="cursor: pointer;"><i class="fa fa-sign-out"></i><a (click)="logout()">Sign Out</a></li>
                 </ul>
@@ -235,6 +236,7 @@
               <li>
                 <a href="">Welcome {{this.authService.decodedToken?.unique_name | titlecase}}</a>
                 <ul style="width: 150px;" class="sub_menu">
+                  <li style="cursor: pointer;"><i class="fa fa-user-circle"></i><a [routerLink]="['/profile']">Edit Profile</a></li>
                   <li style="cursor: pointer;"><i class="fa fa-shopping-cart"></i><a [routerLink]="['/purchases']">Orders</a></li>
                   <li style="cursor: pointer;"><i class="fa fa-sign-out"></i><a (click)="logout()">Sign Out</a></li>
                 </ul>
